--- a/views/home.pug
+++ b/views/home.pug
@@ -5,29 +5,31 @@ html
         link(rel="stylesheet" href="css/main.css")
     body
         .wrapper
-            .wrapper--text
+            .wrapper__text
                 h1
                     | Welcome to the chat!
                 h2
                     | Choose a chatroom and enter your nickname. Then click 'Enter!' and chat with other people!
-                input(class="input is-medium" type="text" placeholder="Enter your nickname")
-                .field
-                    .control
-                        div(class="select is-medium")
-                            select
-                                option
-                                    | Room 1
-                                option
-                                    | Room 2
-                                option
-                                    | Room 3
-                                option
-                                    | Room 4
-                                option
-                                    | Room 5
-                .submit
-                    a(class="button is-link is-medium")
-                        | Enter!
+                form(action="/chatroom" method="POST")
+                    input(class="input is-medium" type="text" placeholder="Enter your nickname" name="nickname" required)
+                    .field
+                        .control
+                            div(class="select is-medium")
+                                select(name="room")
+                                    option(value="1")
+                                        | Room 1
+                                    option(value="2")
+                                        | Room 2
+                                    option(value="3")
+                                        | Room 3
+                                    option(value="4")
+                                        | Room 4
+                                    option(value="5")
+                                        | Room 5
+                        .submit
+                            input(type="submit" value="Enter!" class="button is-link is-medium")
+
+
         footer
             | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
             a(href="https://devszczepaniak.pl")
