--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -3,6 +3,7 @@ html
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css")
         link(rel="stylesheet" href="css/main.css")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js")
     body
         .wrapper
             .wrapper__text
@@ -28,9 +29,8 @@ html
                                         | Room 5
                         .submit
                             input(type="submit" value="Enter!" class="button is-link is-medium")
-
-
         footer
             | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
             a(href="https://devszczepaniak.pl")
                 | devszczepaniak.pl
+        script(src="js/chat.js" async)
