--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,7 +6,7 @@ html
         script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js")
     body
         .wrapper
-            .wrapper__text
+            .wrapper__content
                 h1
                     | Welcome to the chat!
                 h2
@@ -33,4 +33,3 @@ html
             | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
             a(href="https://devszczepaniak.pl")
                 | devszczepaniak.pl
-        script(src="js/chat.js" async)
