--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -15,6 +15,7 @@ body {
     text-align: center;
     font-size: 2rem;
     font-weight: 700;
+    margin: .5rem 0;
 }
 .wrapper .wrapper__content h2 {
     text-align: center;
@@ -58,6 +59,9 @@ body {
 .wrapper .wrapper__content .add-message textarea {
     font-size: 1.1rem;
     resize: none;
+}
+.wrapper .wrapper__content .wrapper__content--link {
+    text-align: center;
 }
 footer {
     height: 4vh;
