Simplyfy methods in controllers | Display room number in chatroom view

--- a/src/views/chatroom.pug
+++ b/src/views/chatroom.pug
@@ -8,7 +8,7 @@ html
         .wrapper
             .wrapper__content
                 h1
-                    | Chatroom number 1!
+                    | Chatroom number #{room}!
                 .messages
                     ul
                         li
