Install Webpack 4 | Add SCSS | Create Webpack config

--- a/src/views/chatroom.pug
+++ b/src/views/chatroom.pug
@@ -2,7 +2,7 @@ html
     head
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css")
-        link(rel="stylesheet" href="css/main.css")
+        link(rel="stylesheet" href="dist/style.css")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js")
     body
         .wrapper
@@ -31,4 +31,4 @@ html
             | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
             a(href="https://devszczepaniak.pl")
                 | devszczepaniak.pl
-        script(src="js/chat.js" async)
+        script(src="dist/main.js" async)
