--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -2,8 +2,7 @@ html
     head
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css")
-        link(rel="stylesheet" href="css/main.css")
-        script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js")
+        link(rel="stylesheet" href="dist/style.css")
     body
         .wrapper
             .wrapper__content
