Rewrite styles to SCSS | Optimize styles

--- a/src/public/scss/main.scss
+++ b/src/public/scss/main.scss
@@ -1,67 +1,59 @@
+@import "mixins";
+
 body {
   margin: 0;
   background-color: #fafafa;
   font-family: 'Montserrat', sans-serif;
 }
 .wrapper {
-  margin: 0 auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @include grid__center;
   height: 96vh;
-  max-width: 60%;
-}
-.wrapper .wrapper__content h1 {
-  text-align: center;
-  font-size: 2rem;
-  font-weight: 700;
-  margin: .5rem 0;
-}
-.wrapper .wrapper__content h2 {
-  text-align: center;
-  font-size: 1.5rem;
-}
-.wrapper .wrapper__content .input {
-  margin: .5rem;
-}
-.wrapper .wrapper__content .control {
-  margin: 1.5rem 0;
-  display: flex;
-  justify-content: center;
-}
-.wrapper .wrapper__content .submit {
-  display: flex;
-  justify-content: center;
-  margin-top: 2rem;
-}
-.wrapper .wrapper__content .messages {
-  margin-top: 2rem;
-  max-height: 50vh;
-  overflow-y: scroll;
-}
-.wrapper .wrapper__content ul li {
-  font-size: 1.1rem;
-  padding: .75rem .5rem;
-  background-color: #F3F3F3;
-  display: flex;
-}
-.wrapper .wrapper__content ul li strong {
-  min-width: 8rem;
-  max-width: 8rem;
-}
-.wrapper .wrapper__content ul li:nth-child(odd) {
-  background-color: #DBDCDE;
-}
-.wrapper .wrapper__content ul li strong {
-  min-width: 8rem;
-  max-width: 8rem;
-}
-.wrapper .wrapper__content .add-message textarea {
-  font-size: 1.1rem;
-  resize: none;
-}
-.wrapper .wrapper__content .wrapper__content--link {
-  text-align: center;
+  max-width: 100%;
+  margin: 0 20%;
+  .wrapper__content {
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      font-weight: 700;
+      margin: .5rem 0;
+    }
+    h2 {
+      text-align: center;
+      font-size: 1.5rem;
+    }
+    .input {
+      margin-top: .5rem;
+    }
+    .control, .submit {
+      @include grid__center;
+      margin: 1rem 0;
+    }
+    .messages {
+      margin-top: 2rem;
+      max-height: 50vh;
+      overflow-y: scroll;
+    }
+    .add-message textarea {
+      font-size: 1.1rem;
+      resize: none;
+    }
+    .wrapper__content--link {
+      text-align: center;
+    }
+    ul li {
+      font-size: 1.1rem;
+      padding: .75rem .5rem;
+      background-color: #F3F3F3;
+      display: flex;
+      &:nth-child(odd) {
+        background-color: #DBDCDE;
+      }
+      strong {
+        min-width: 8rem;
+        max-width: 8rem;
+      }
+    }
+  }
 }
 footer {
   height: 4vh;
