--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -29,6 +29,7 @@ html
                         .submit
                             input(type="submit" value="Enter!" class="button is-link is-medium")
         footer
-            | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
+            span
+                | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
             a(href="https://devszczepaniak.pl")
                 | devszczepaniak.pl
