Center footer using grid instead of flexbox

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -29,7 +29,8 @@ html
                         .submit
                             input(type="submit" value="Enter!" class="button is-link is-medium")
         footer
-            span
-                | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
-            a(href="https://devszczepaniak.pl")
-                | devszczepaniak.pl
+            div
+                span
+                    | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
+                a(href="https://devszczepaniak.pl")
+                    | devszczepaniak.pl
