--- a/src/public/scss/main.scss
+++ b/src/public/scss/main.scss
@@ -56,9 +56,10 @@ body {
   }
 }
 footer {
+  width: 100%;
   height: 4vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
   background-color: #ebebeb;
+  justify-items: center;
+  align-content: center;
 }
