--- a/src/views/404.pug
+++ b/src/views/404.pug
@@ -12,6 +12,8 @@ html
                     a(href="/")
                         | Back to the main page
         footer
-            | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
-            a(href="https://devszczepaniak.pl")
-                | devszczepaniak.pl
+            div
+                span
+                    | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
+                a(href="https://devszczepaniak.pl")
+                    | devszczepaniak.pl
