--- a/src/views/chatroom.pug
+++ b/src/views/chatroom.pug
@@ -28,7 +28,9 @@ html
                     .submit
                         input(type="submit" value="Enter!" class="button is-link is-medium")
         footer
-            | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
-            a(href="https://devszczepaniak.pl")
-                | devszczepaniak.pl
+            div
+                span
+                    | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
+                a(href="https://devszczepaniak.pl")
+                    | devszczepaniak.pl
         script(src="dist/main.js" async)
