--- a/src/views/chatroom.pug
+++ b/src/views/chatroom.pug
@@ -6,11 +6,11 @@ html
         script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js")
     body
         .wrapper
-            .wrapper__content
+            div(class="wrapper__content" id="chat")
                 h1
                     | Chatroom number #{room}!
-                .messages
-                    ul
+                div(class="messages" id="chat-window")
+                    ul(id="output")
                         li
                             strong Mark
                             | Hello, it's me!
@@ -24,9 +24,9 @@ html
                             strong Jose Arcadio Morales
                             |Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eget venenatis felis. Suspendisse potenti. Etiam eu leo in augue suscipit tempus. Sed elementum augue vitae accumsan hendrerit. Maecenas semper lacus nisl. Integer sollicitudin ante a felis viverra, vitae vulputate orci accumsan. Donec elit mi, accumsan sed felis et, sagittis finibus mi. Aliquam erat volutpat. Sed suscipit, libero nec porttitor ornare, nulla erat scelerisque nunc, consectetur hendrerit felis sapien ut ligula. Aliquam at laoreet turpis. Proin ultrices nulla finibus laoreet scelerisque.
                 .add-message
-                    textarea(class="textarea" placeholder="e.g. Hello world")
+                    textarea(class="textarea" id="message" placeholder="e.g. Hello world")
                     .submit
-                        input(type="submit" value="Enter!" class="button is-link is-medium")
+                        input(type="submit" value="Enter!" id="send" class="button is-link is-medium")
         footer
             div
                 span
