Getting data in a proper way | remove unnecessary code

--- a/src/views/chatroom.pug
+++ b/src/views/chatroom.pug
@@ -33,4 +33,7 @@ html
                     | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
                 a(href="https://devszczepaniak.pl")
                     | devszczepaniak.pl
+        script(type='text/javascript').
+            const room = "!{room}"
+            const nickname = "!{nickname}"
         script(src="dist/main.js" async)
