--- a/src/views/chatroom.pug
+++ b/src/views/chatroom.pug
@@ -12,7 +12,7 @@ html
                 div(class="messages")
                     ul(id="output")
                 .add-message
-                    textarea(class="textarea" id="message" placeholder="e.g. Hello world")
+                    textarea(class="textarea" id="message" placeholder="Say hello!")
                     .submit
                         input(type="submit" value="Enter!" id="send" class="button is-link is-medium")
         footer
