Handle chat rooms routing in a proper way

--- a/src/views/chatroom.pug
+++ b/src/views/chatroom.pug
@@ -2,7 +2,7 @@ html
     head
         link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700")
         link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css")
-        link(rel="stylesheet" href="dist/style.css")
+        link(rel="stylesheet" href="../dist/style.css")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.1.1/socket.io.js")
     body
         .wrapper
@@ -24,4 +24,4 @@ html
         script(type='text/javascript').
             const room = "!{room}"
             const nickname = "!{nickname}"
-        script(src="dist/main.js" async)
+        script(src="../dist/main.js" async)
