--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,7 +10,7 @@ html
                     | Welcome to the chat!
                 h2
                     | Choose a chatroom and enter your nickname. Then click 'Enter!' and chat with other people!
-                form(action="/chatroom" method="POST")
+                form(action="/chatroom/1" method="POST" id="joinForm")
                     input(class="input is-medium" id="user" type="text" placeholder="Enter your nickname" name="nickname" required)
                     .field
                         .control
@@ -34,3 +34,4 @@ html
                     | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
                 a(href="https://devszczepaniak.pl")
                     | devszczepaniak.pl
+        script(src="dist/room.js" async)
