--- a/src/views/404.pug
+++ b/src/views/404.pug
@@ -6,12 +6,12 @@ html
     body
         .wrapper
             .wrapper__content
-                h1
+                h1(class="wrapper__content__header--first")
                     | 404 page not found
-                .wrapper__content--link
+                .wrapper__content__link
                     a(href="/")
                         | Back to the main page
-        footer
+        footer(class="main__footer")
             div
                 span
                     | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
