--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,29 +6,28 @@ html
     body
         .wrapper
             .wrapper__content
-                h1
+                h1(class="wrapper__content__header--first")
                     | Welcome to the chat!
-                h2
+                h2(class="wrapper__content__header--second")
                     | Choose a chatroom and enter your nickname. Then click 'Enter!' and chat with other people!
-                form(action="/chatroom/1" method="POST" id="joinForm")
-                    input(class="input is-medium" id="user" type="text" placeholder="Enter your nickname" name="nickname" required)
-                    .field
-                        .control
-                            div(class="select is-medium")
-                                select(name="room" id="room")
-                                    option(value="1")
-                                        | Room 1
-                                    option(value="2")
-                                        | Room 2
-                                    option(value="3")
-                                        | Room 3
-                                    option(value="4")
-                                        | Room 4
-                                    option(value="5")
-                                        | Room 5
-                        .submit
-                            input(type="submit" value="Enter!" class="button is-link is-medium")
-        footer
+                form(action="/chatroom/1" method="POST" id="joinForm" class="wrapper__content__form")
+                    input(class="input is-medium wrapper__content__form__input" id="user" type="text" placeholder="Enter your nickname" name="nickname" required)
+                    .wrapper__content__form__room
+                        div(class="select is-medium")
+                            select(name="room" id="room")
+                                option(value="1")
+                                    | Room 1
+                                option(value="2")
+                                    | Room 2
+                                option(value="3")
+                                    | Room 3
+                                option(value="4")
+                                     | Room 4
+                                option(value="5")
+                                    | Room 5
+                    .wrapper__content__form__submit
+                        input(type="submit" value="Enter!" class="button is-link is-medium")
+        footer(class="main__footer")
             div
                 span
                     | Copyright Dominik Szczepaniak 2018 &nbsp; | &nbsp;
