--- a/src/views/chatroom.pug
+++ b/src/views/chatroom.pug
@@ -15,7 +15,7 @@ html
                     |
                 .wrapper__content__message--add
                     textarea(class="textarea" id="message" placeholder="Say hello!")
-                    .wrapper__content__form__submit
+                    .form__submit
                         input(type="submit" value="Enter!" id="send" class="button is-link is-medium")
         footer(class="main__footer")
             div
@@ -26,4 +26,4 @@ html
         script(type='text/javascript').
             const room = "!{room}"
             const nickname = "!{nickname}"
-        script(src="../dist/main.js" async)
+        script(src="../dist/index.js" async)
