Add view to displaying errors

--- a/src/views/error.pug
+++ b/src/views/error.pug
@@ -7,7 +7,7 @@ html
         .wrapper
             .wrapper__content
                 h1(class="wrapper__content__header--first")
-                    | 404 page not found
+                    | Unexpeced error occured: #{message}
                 .wrapper__content__link
                     a(href="/")
                         | Back to the main page
