--- a/src/public/scss/main.scss
+++ b/src/public/scss/main.scss
@@ -42,15 +42,17 @@ body {
     .wrapper__content__link {
       text-align: center;
     }
-    ul li {
+    .message__list .message {
       font-size: 1.1rem;
-      padding: .75rem .5rem;
+      padding: 1.25rem .5rem;
+      margin: 0;
+      border-radius: 0;
       background-color: #EBEBEB;
       display: flex;
       &:nth-child(odd) {
         background-color: #DBDCDE;
       }
-      strong {
+      .message--name {
         min-width: 8rem;
         max-width: 8rem;
       }
